hphp/hack/test/typecheck/typedefs_generics_arity1.php.exp
File "typedefs_generics_arity1.php", line 8, characters 20-20:
The type B expects 1 type parameter(s) (Typing[4101])
File "typedefs_generics_arity1.php", line 3, characters 7-7:
Definition is here
